[package]
name = "messages"
version = "0.0.0-2023.3.16.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
encoding = ["serde"]
serde = ["dep:rmp-serde", "dep:serde"]
tracing = ["dep:tracing", "dep:tracing-wasm"]

[dependencies]
cfg-if = "1.0.0"
noop_proc_macro = "0.3.0"
paste = "1.0.11"
rmp-serde = { version = "1.1.1", optional = true }
serde = { version = "1.0.149", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.63" }
serde = { version = "1.0.149", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tracing-wasm = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"
